--- a/analyses/Analysis_Levin.ipynb
+++ b/analyses/Analysis_Levin.ipynb
@@ -215,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataLiteracy",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
